--- a/BioCro/DARPA/regional_runs.Rmd
+++ b/BioCro/DARPA/regional_runs.Rmd
@@ -293,3 +293,144 @@ ggplot() +
                fill = "white", color = "black") +
   geom_raster(data = comb_by_space, aes(x = lon, y = lat, fill = mean_diff))
 ```
+
+# Changed Carbon Allocation Regional Runs
+
+## Read in input files
+
+This set of runs uses the same parameters as above for the high light treatment, except in `config.xml` the values of all `kStem` are halved, with the remaining half split evenly between the other plant parts by stage. 
+
+```{r}
+config_ca <- read.biocro.config("regional_runs_inputs/config_ca.xml")
+```
+
+## Run BioCro on each location
+
+```{r}
+dir.create("regional_runs_inputs/results/high_light_ca_stlew")
+
+regional_run_results_ca <- c()
+for(point in 1:nrow(latlon)){
+  biocro_met_path <- paste0("regional_runs_inputs/biocro_met_stlew/stlew-", 
+                            latlon$lat[point], "-", latlon$lon[point])
+  regional_run_result_ca <- run.biocro(latlon$lat[point], latlon$lon[point],
+                               metpath = biocro_met_path,
+                               soil.nc = soil_nc,
+                               config = config_ca)
+  regional_run_result_ca_daily <- regional_run_result_ca$daily
+  write.csv(regional_run_result_ca_daily, paste0("regional_runs_inputs/results/high_light_ca_stlew/daily-", 
+                                         latlon$lat[point], "-", latlon$lon[point], ".csv"))
+  regional_run_result_ca_daily$lat <- latlon$lat[point]
+  regional_run_result_ca_daily$lon <- latlon$lon[point]
+  regional_run_results_ca <- rbind(regional_run_results_ca, regional_run_result_ca_daily)
+  print(point)
+}
+
+write.csv(regional_run_results_ca, 
+          "regional_runs_inputs/results/high_light_ca_stlew_results.csv")
+```
+
+## Plot estimated biomass
+
+```{r}
+regional_run_results_ca <- read.csv("regional_runs_inputs/results/high_light_ca_stlew_results.csv")
+regional_run_results_ca <- regional_run_results_ca %>% 
+  mutate(date = as.Date(doy, "2009-12-31"), 
+         latlon = paste0(lat, lon), 
+         total_biomass = as.numeric(Stem + Leaf + Root + Rhizome + Grain))
+
+ggplot(regional_run_results_ca, aes(x = date, y = total_biomass, group = latlon, color = latlon)) +
+  geom_line() +
+  theme(legend.position = "none")
+```
+
+```{r}
+summer_day_plot_ca <- ggplot() +
+  geom_polygon(data = overall_map, aes(x = long, y = lat, group = group), 
+               fill = "white", color = "black") +
+  geom_raster(data = filter(regional_run_results_ca, doy == 200), aes(x = lon, y = lat, fill = total_biomass)) +
+  coord_quickmap() +
+  ggtitle("Day 200")
+
+winter_day_plot_ca <- ggplot() +
+  geom_polygon(data = overall_map, aes(x = long, y = lat, group = group), 
+               fill = "white", color = "black") +
+  geom_raster(data = filter(regional_run_results_ca, doy == 350), aes(x = lon, y = lat, fill = total_biomass)) +
+  coord_quickmap() +
+  ggtitle("Day 350")
+
+cowplot::plot_grid(summer_day_plot_ca, winter_day_plot_ca, nrow = 1)
+```
+
+```{r}
+# ggplot() +
+#   geom_polygon(data = ecoregions_df_chiruss, aes(long, lat, group = group, col = ECO_NAME)) +
+#   geom_polygon(data = ecoregions_background, aes(x = long, y = lat, group = group), fill = NA, color = "black") +
+#   theme(legend.position = "none") +
+#   geom_raster(data = filter(regional_run_results_ca, doy == 200), aes(x = lon, y = lat, fill = total_biomass)) +
+#   coord_cartesian(xlim = c(mean(regional_run_results_ca$lon) - 20, mean(regional_run_results_ca$lon) + 20),
+#                   ylim = c(min(regional_run_results_ca$lat) - 5, max(regional_run_results_ca$lat) + 5)) +
+#   theme(legend.position = "none")
+```
+
+```{r}
+biomass_animation_ca <- ggplot() +
+  geom_polygon(data = gif_background, aes(x = long, y = lat, group = group), 
+               fill = "white", color = "black") +
+  geom_raster(data = regional_run_results_ca, aes(x = lon, y = lat, fill = total_biomass)) +
+  geom_point(data = city_coords, aes(x = lon, y = lat)) +
+  scale_fill_gradient2(low = "yellow", mid = "yellowgreen", high = "darkgreen", 
+                       midpoint = 10, 
+                       breaks = seq(-100, 100, 4), 
+                       limits = c(0, 20)) +
+  theme(panel.background = element_rect(fill = "grey", colour = "grey"), 
+        panel.grid.major = element_line(colour = "grey"),
+        panel.grid.minor = element_line(colour = "grey")) +
+  transition_manual(doy) +
+  ggtitle('Day: {current_frame}') +
+  coord_quickmap()
+
+animate(biomass_animation_ca, fps = 100)
+anim_save("high_light_ca_stlew.gif", animation = biomass_animation_ca, 
+          path = "regional_runs_inputs/results/", fps = 100)
+```
+
+# Comparing Regional Runs
+
+Combining data from high light and changed carbon allocation regional runs.
+
+```{r}
+rr <- regional_run_results %>% 
+  select(date, lat, lon, latlon, total_biomass)
+rr_ca <- regional_run_results_ca %>% 
+  select(date, latlon, total_biomass) %>% 
+  rename(total_biomass_ca = total_biomass)
+comb <- left_join(rr, rr_ca, by = c("date", "latlon")) %>% 
+  mutate(total_biomass_diff = total_biomass_ca - total_biomass)
+```
+
+Time series showing mean difference in biomass for locations, with variation in daily values shown.
+
+```{r}
+comb_by_time <- comb %>% 
+  group_by(date) %>% 
+  summarise(mean_diff = mean(total_biomass_diff, na.rm = TRUE), 
+            sd_diff = sd(total_biomass_diff, na.rm = TRUE))
+
+ggplot(comb_by_time, aes(x = date, y = mean_diff)) + 
+  geom_line() + 
+  geom_ribbon(aes(ymin = mean_diff - sd_diff, ymax = mean_diff + sd_diff), alpha = 0.3)
+```
+
+Spatial plot showing mean difference in biomass for days. 
+
+```{r}
+comb_by_space <- comb %>% 
+  group_by(latlon, lat, lon) %>% 
+  summarise(mean_diff = mean(total_biomass_diff, na.rm = TRUE)) 
+
+ggplot() +
+  geom_polygon(data = overall_map, aes(x = long, y = lat, group = group), 
+               fill = "white", color = "black") +
+  geom_raster(data = comb_by_space, aes(x = lon, y = lat, fill = mean_diff))
+```
